cosinnus/static/less/general.less
/* ... */
// spaces below full width elements
body, .x-v3-container, .x-v3-content {
	.fine-space,
	.fine-space.form-control {
		border-bottom: 1px solid @app-neutral-color-light;
	}
	.form-control-heavy {
		border: 1px solid @app-neutral-color-light;
	}
	.small-space {
		margin-bottom: 4px;
	}
	.regular-space {
		margin-bottom: 7px;
	}
	.large-space {
		margin-bottom: 12px;
	}
	.ultra-space {
		margin-bottom: 30px;
	}
}


.navbar-fixed-top {
	font-size: 1.2em;
}
// Avatar
.navbar-fixed-top img {
	width:35px;
	margin:-10px 5px -10px 0;
}

// the nice semi transparent box containing the content
.content-box {
	padding: 15px;
	background-color:fadeout(@app-neutral-color-light, 50);
	.clearfix();
}
.content-box .btn.w100 {
	text-align:left;
}


/* input-area is an OL of input elements.
	It looks like a white box full of inputs with gray vertical and horizontal separators.
*/
.input-area {
	margin: 0 0 0 0;
	background-color: #FFFFFF;
	color: @app-neutral-color-dark;
  list-style: none;
	padding: 0;
	.clearfix();

	+ .input-area {
		border-top: 1px solid @app-neutral-color-light;
	}

	// single input fields
	> li {
		min-height: 40px;
		line-height: 25px;
		padding: 4px 7px;
		display: inline-block;
		float: left;
		white-space: normal;

		color: @app-neutral-color-dark;

		+ li {
			border-left: 1px solid @app-neutral-color-light;
		}

		&.w100 {
			padding-right: 20px;

			> i {
				vertical-align: top;
				margin-top: 6px;
			}
			> i + .select2-container {
				width: 100%;
				margin-left:-1px;
			}
			textarea {
				margin-left: 6px;
				padding-top: 5px;
			}
		}

		> a {


			> i {
				color: @app-neutral-color-dark;
				font-size: 1.5em;
				line-height: 25px;
			}
		}

		&.input-area-privacy-selector {
			float: right;
			a {
				color: @app-neutral-color-dark;

				&:hover, &:active, &:focus {
					text-decoration: none;
				}
			}
		}

		&.input-area-lighter a i {
			color: @app-neutral-color;

			&:hover, &:active, &:focus {
				color: @app-neutral-color-dark;
			}
		}
	}

	&.input-area-left-column {
		li {
			border-width: 0;
		}
	}
}

.dashboard-appwidget .input-area li textarea {
	height: 7em;
	line-height: 1.3em;
}


/* The serachbar in the fixed top navigation */
#searchbar {
	padding: 15px 15px 6px 10px;
	white-space: nowrap;
	color: @app-neutral-color-dark;
	font-size: 1.1em;
	cursor: text;
}
#searchbar.expanded {
	background-color: #FFFFFF;
}
#searchbar input {
	width: 0px;
	display: inline;
	margin-top: -10px;
	color: transparent;
	border-width: 0;
}
#searchbar.expanded input {
	width: 125px;
	transition: all 200ms linear;
	color: @app-neutral-color-dark;
	box-shadow: none;
}
#searchbar i.fa-search {
	cursor: pointer;
}


// .fadedown
.fadedown {
	.clearfix();
}

p.navi-explanation {
	background-color: transparent;
	color: @app-neutral-color-white;
	margin: 0;
	padding: 0 0 8px 0;
}

.bottom-align {
	position: absolute;
	right: 0;
	bottom: 0;
}


ul.errorlist {
	list-style-type: none;
	padding: 0;
	margin: 0;
	clear: both;
	background-color: @app-main-color-no;

	li {
		padding: 7px 10px 7px 10px;
		margin: 0 0 0 18px;

		color: @app-neutral-color-white;
		line-height: 22px;
		font-size: 14px;

		&:before {
			font-family: 'FontAwesome';
			content: '\f071';
			margin:0 7px 0 -18px;
		}
	}
}

.panel {
    .panel-heading {
        cursor: pointer;
        padding: 0;

        .panel-title {
            padding: 10px 15px;
            font-size: 16px;

            &:not(.collapsed) .panel-collapsed {
                display: none;
            }
            &.collapsed {
                .panel-open {
                    display: none;
                }
            }
        }
    }
}
.panel-default {
    border: none;
    border-left: 3px solid whitesmoke;
    margin-bottom: 12px !important;
    background-color: transparent;

    &.large-space {
        margin-bottom: 20px !important;
    }
}

#map {
	height: 100px;
}
#map.large {
	height: 500px;
}




.generic-background-colors(@light,@normal,@dark) {
	.app-background {
		background-color: @normal;
	}
	.app-background-light {
		background-color: @light;
	}
	.app-background-dark {
		background-color: @dark;
	}
}


.app-main {
	.generic-background-colors(@app-main-color-light,@app-main-color,@app-main-color-dark);
}
.app-calendar {
    .generic-background-colors(@app-calendar-color-light,@app-calendar-color,@app-calendar-color-dark);
}
.app-cloud {
    .generic-background-colors(@app-cloud-color-light,@app-cloud-color,@app-cloud-color-dark);
}
.app-files {
	.generic-background-colors(@app-files-color-light,@app-files-color,@app-files-color-dark);
}
.app-documents {
	.generic-background-colors(@app-documents-color-light,@app-documents-color,@app-documents-color-dark);
}
.app-poll {
	.generic-background-colors(@app-poll-color-light,@app-poll-color,@app-poll-color-dark);
}
.app-marketplace {
    .generic-background-colors(@app-marketplace-color-light,@app-marketplace-color,@app-marketplace-color-dark);
}
.app-message {
    .generic-background-colors(@app-message-color-light,@app-message-color,@app-message-color-dark);
}
.app-todos {
	.generic-background-colors(@app-todos-color-light,@app-todos-color,@app-todos-color-dark);
}
.app-etherpad {
	.generic-background-colors(@app-etherpad-color-light,@app-etherpad-color,@app-etherpad-color-dark);
}




.font11px {
	font-size: 11px !important;
}
.font12px {
	font-size: 12px !important;
}
.font14px {
	font-size: 14px !important;
}
.nounderline {
	text-decoration: none !important;
	&:hover, &:focus, &:active {
		// text-decoration: underline !important;
	}
}
.no-vertical-padding {
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	min-height: 0 !important;
}
.no-horizontal-padding {
	padding-left: 0 !important;
	padding-right: 0 !important;
}

.comment-background, .comment-background p {
	background-color: @comment-background-color !important;
}

.indented {
    padding-left: 40px;
}
.extra-indented {
  padding-left: 50px;
}
/* ... */

